--- a/project/templates/auth/password_resetting.html
+++ b/project/templates/auth/password_resetting.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="title m-3" align="center">
+    <div class="title m-3 text-center">
         <h1>Скидання паролю</h1>
     </div>
 
