--- a/project/templates/layouts/topic_layout.html
+++ b/project/templates/layouts/topic_layout.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="title mt-3 mb-3" align="center">
+    <div class="title m-3 text-center">
         <h1>{{ topic.topic }}</h1>
     </div>
 
