--- a/project/templates/main/account_settings.html
+++ b/project/templates/main/account_settings.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block settings_content %}
-    <div class="title mt-3 mb-3" align="center">
+    <div class="title m-3 text-center">
         <h1>Налаштування акаунту</h1>
     </div>
 
@@ -89,7 +89,7 @@
                     Фото
                 </span>
                 <span class="input-group-text border-start-0 border-end-0 bg-transparent text-end">
-                    <img src="{{ url_for('static', filename=current_user.profile_picture_path) }}"
+                    <img src="{{ url_for('static', filename='images/user_pictures/' + current_user.profile_picture) }}"
                          class="pfp rounded">
                 </span>
 
@@ -110,10 +110,10 @@
                         <div class="modal-body">
 
                             <p>Ваше попереднє фото профілю:</p>
-                            <img src="{{ url_for('static', filename=current_user.profile_picture_path) }}"
+                            <img src="{{ url_for('static', filename='images/user_pictures/' + current_user.profile_picture) }}"
                                  class="pfp rounded mb-3">
 
-                            {% if current_user.profile_picture_name != 'default_pfp.svg' %}
+                            {% if current_user.profile_picture != 'default_pfp.svg' %}
                                 <br>
                                 <button type="button" class="btn btn-outline-danger border mb-3" onclick="deleteProfilePicture()">
                                     Видалити фото
