--- a/project/templates/main/feedback.html
+++ b/project/templates/main/feedback.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="title mt-3 mb-3" align="center">
+    <div class="title m-3 text-center">
         <h1>Зворотній зв'язок</h1>
     </div>
 
