--- a/project/templates/main/security_settings.html
+++ b/project/templates/main/security_settings.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block settings_content %}
-    <div class="title mt-3 mb-3" align="center">
+    <div class="title m-3 text-center">
         <h1>Налаштування безпеки</h1>
     </div>
 
