--- a/project/templates/main/topics.html
+++ b/project/templates/main/topics.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="title mt-3 mb-3" align="center">
+    <div class="title m-3 text-center">
         <h1>Категорії статей</h1>
     </div>
 
