--- a/project/templates/layouts/layout.html
+++ b/project/templates/layouts/layout.html
@@ -64,6 +64,13 @@
 
                         {% if current_user.is_authenticated %}
                             <li class="nav-item">
+                                <a class="nav-link {% if request.endpoint == 'views.articles_builder' %}active{% endif %}"
+                                   href="{{ url_for('views.articles_builder') }}">
+                                    Конструктор статей
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
                                 <div class="dropdown">
                                     <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         @{{ current_user.username }}
